*SVN*

* resource and scaffold_resource generators add a restful route to config/routes.rb  [Jeremy Kemper]

* Revert environment changes for autoload_paths. [Koz]

* Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]

* Clean up the output of rake stats,  de-emphasise components and apis, and remove the indents for tests [Koz]

* Added option to script/process/spawner of specifying the binding address #5133 [zsombor]

* Update environment.rb comments to include config.autoload_paths. Closes #6478 [caio]

* Update scaffold to use new form_tag block functionality.  Closes #6480. [BobSilva]

* Plugin generator: check for class collisions.  #4833 [vinbarnes@gmail.com]

* Mailer generator: handle mailers in modules, set mime_version in unit test.  [Jeremy Kemper]

* Set $KCODE to 'u' by default to enable the multibyte safe String#chars proxy. [Koz]

* Added config.plugins to control which plugins are loaded #6269 [skaes]. By default, everything in vendor/plugins will be loaded, but if you specify config.plugins, only those will be loaded. Example:

    config.plugins = %w[ routing_navigator simply_helpful ]

* Clean up html on included error pages. [Tim Lucas]

* Fixed default 404.html and 500.htmls to remove extreme ugliness and include human language [DHH]

* Update to latest Prototype and script.aculo.us trunk versions [Thomas Fuchs]

* PostgreSQL: db:test:purge closes open database connections first.  #6236 [alex]

* Fixed test:uncommitted on Windows (backslash issue) #4999 [paul@paulbutcher.com]

* Fixed migration creation to work with namespaced models, so script/generate model Gallery::Image will use create_table :gallery_images #6327 [BobSilva]

* Fixed rename_table on SQLite tables with indexes defined #5942 [brandon@opensoul.org]
